--- a/projects.html
+++ b/projects.html
@@ -11,15 +11,24 @@
     <h1>PROJECTS</h1>
         <div id="p2">
         <li>Anniversary project</li>
-        <br>
         <li>
             My Portfolio
-            <ul>Education</ul>
-            <ul>Experience</ul>
-            <ul>Projects</ul>
+        </li>
+        <li>
+            Netflix Clone.
+        </li>
+        <li>
+            Single page Website
+        </li>
+        <li>
+            To-do list(Ongoing)
+        </li>
+        <li>
+            HTML and Bootstrap Calculator
         </li>
     </div>
-    <footer>
+    <div class="container button"><a href="index.html">Back</a></div>  
+    <footer id="projectfooter">
         <h6>Contact me at 8154972879</h6>
         <h6>Instagram: <a href="https://www.instagram.com/therohithanand_/">@therohithanand_</a></h6>
     </footer>
