--- a/education.html
+++ b/education.html
@@ -79,6 +79,7 @@
             </tr>
         </tbody>
     </table>
+    <div class="container button"><a href="index.html">Back</a></div>  
 
 </main>
 
